Fixed up README.md file, and fixed defaults, and added mcmod.info file.

--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -2,9 +2,9 @@ messages: {
   exampleOne: {
     mode: "next"
     messages: [
-      {next: 2, pre-delay: 1, post-delay: 1, message: "This is an example message!"}
-      {next: 3, pre-delay: 1, post-delay: 1, message: "You can switch the modes if you want too!"}
-      {next: 1, pre-delay: 1, post-delay: 1, message: "You can even remove some of the values!"}
+      {next: 2, pre-delay: 3, post-delay: 3, message: "This is an example message!"}
+      {next: 3, pre-delay: 3, post-delay: 3, message: "You can switch the modes if you want too!"}
+      {next: 1, pre-delay: 3, post-delay: 3, message: "You can even remove some of the values!"}
     ]
   }
   exampleTwo: {
@@ -12,7 +12,7 @@ messages: {
     messages: [
       {message: "You see, I am a different message!"}
       {message: "These messages are very simple, and run randomly!"}
-      {message: "But we are all ten seconds apart, because that is what we default to!"}
+      {message: "But we are all five seconds apart, because that is what we default to!"}
     ]
   }
 }
