Added support for prefixes, suffixes, default message formatting.

--- a/src/main/resources/config.conf
+++ b/src/main/resources/config.conf
@@ -1,6 +1,12 @@
 messages: {
   exampleOne: {
     mode: "next"
+
+    prefix: "&4[SpongeCast]"
+    suffix: " I AM A SUFFIX!"
+
+    format: {color: "red", style: "bold italics"}
+
     messages: [
       {next: 2, pre-delay: 3, post-delay: 3, message: "This is an example message!"}
       {next: 3, pre-delay: 3, post-delay: 3, message: "You can switch the modes if you want too!"}
@@ -9,10 +15,18 @@ messages: {
   }
   exampleTwo: {
     mode: "random"
+
+    prefix: "SpongeCast"
+    suffix: ""
+
     messages: [
       {message: "You see, I am a different message!"}
       {message: "These messages are very simple, and run randomly!"}
       {message: "But we are all five seconds apart, because that is what we default to!"}
+      {
+        permission: "test.test", json:
+        "{\"text\":\"I am also a JSON message as you can tell...\",\"color\":\"dark_blue\",\"bold\":true,\"clickEvent\":{\"action\":\"open_url\",\"value\":\"http://google.com\"},\"hoverEvent\":{\"action\":\"show_text\",\"value\":{\"text\":\"\",\"extra\":[{\"text\":\"There you go!\",\"color\":\"gray\"}]}}}"
+      }
     ]
   }
 }
